<!--
  ~ Copyright (c) 2020, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
  ~
  ~ WSO2 Inc. licenses this file to you under the Apache License,
  ~ Version 2.0 (the "License"); you may not use this file except
  ~ in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<resources>
    <string name="app_name">WSO2 Sample</string>
    <string name="splash_title">Android Authentication Application</string>
    <string name="username">UserName</string>
    <string name="email_address">Email Address</string>
    <string name="user_profile">User Profile</string>
    <string name="logout">Logout</string>
    <string name="username1">User Name</string>
    <string name="email">Email Address</string>
    <string name="logoutb">Logout</string>
    <string name="login_with_wso2_is">Login with WSO2 Identity Server</string>
    <string name="login">Login</string>
    <string name="idtoken">ID Token</string>
    <string name="showbtn">View Access Token</string>
    <string name="hidebtn">Hide Access Token</string>
    <string name="accesstoken">AccessToken</string>
    <string name="greeting_one">You have successfully logged in.</string>
    <string name="greeting_two">Here are your login details</string>
    <string name="user_name">Name</string>
    <string name="welcome">Welcome</string>
    <string name="todo">TODO</string>
    <string name="scope">Scope</string>
    <string name="redirect_uri">redirect_uri</string>
    <string name="discovery_url">Discovery URL</string>
    <string name="clientid">ClientID</string>
    <string name="configuration">Configuration</string>
</resources>
