<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfoActivity">

    <TextView
        android:id="@+id/emailview"
        android:layout_width="98dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="416dp"
        android:text="@string/email"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="504dp"
        android:background="@color/colorPrimary"
        android:text="@string/logoutb"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/emailid"
        android:layout_width="220dp"
        android:layout_height="28dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="416dp"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/colorForeground"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idtextView"
        android:layout_width="86dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="252dp"
        android:text="@string/idtoken"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idtoken"
        android:layout_width="228dp"
        android:layout_height="145dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="252dp"
        android:textColor="?android:attr/colorForeground"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tokentextView"
        android:layout_width="87dp"
        android:layout_height="31dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="192dp"
        android:text="@string/accesstoken"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accesstoken"
        android:layout_width="229dp"
        android:layout_height="32dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="20dp"
        android:textColor="?android:attr/colorForeground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="84dp"
        android:layout_height="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="120dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/browser_actions_title_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="139dp"
        android:layout_height="31dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="120dp"
        android:textAlignment="textStart"
        android:textColor="@color/browser_actions_title_color"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="62dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="317dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="326dp"
        android:layout_height="32dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="43dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wso2is" />

</androidx.constraintlayout.widget.ConstraintLayout>